[gd_scene load_steps=5 format=3 uid="uid://c8sqop0de8kru"]

[ext_resource type="Texture2D" uid="uid://sawjpssdxwd5" path="res://Assets/Images/bg.png" id="1_1gmcf"]
[ext_resource type="Script" path="res://Scripts/title_screen.gd" id="1_mfuvb"]
[ext_resource type="Theme" uid="uid://pfuiaftiso8f" path="res://Assets/Themes/buttonTheme.tres" id="2_wy4ew"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_iwag8"]

[node name="TitleScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_mfuvb")

[node name="BackGround" type="TextureRect" parent="."]
layout_mode = 2
offset_top = 20.0
offset_right = 1190.0
offset_bottom = 648.0
texture = ExtResource("1_1gmcf")
expand_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 150
theme_override_constants/margin_top = 20
theme_override_constants/margin_bottom = 20

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 6

[node name="continue_button" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
texture_filter = 1
layout_mode = 2
theme = ExtResource("2_wy4ew")
text = "CONTINUAR"

[node name="HSeparator" type="HSeparator" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_iwag8")

[node name="HSeparator2" type="HSeparator" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_iwag8")

[node name="HSeparator3" type="HSeparator" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_iwag8")

[node name="newGame_button" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_wy4ew")
text = "NOVO JOGO"

[node name="HSeparator4" type="HSeparator" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_iwag8")

[node name="HSeparator5" type="HSeparator" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_iwag8")

[node name="HSeparator6" type="HSeparator" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_iwag8")

[node name="quit_button" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_wy4ew")
text = "SAIR DO JOGO"

[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/continue_button" to="." method="_on_continue_button_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/newGame_button" to="." method="_on_new_game_button_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/quit_button" to="." method="_on_quit_button_pressed"]
